# work-pulse

./: .env  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  build.cmd  db-migrate-docker.cmd  db-migrate.cmd  docker-compose.yml
db/: schema.sql
dev-plans/: resolver-v2-migration.md
doc/: feature-analysis.md  repository_factory.drawio  work-pulse-domain-model-diagrams.md  work-pulse-domain-model.md
scripts/: build.cmd  clean-data-folder.cmd  new-session.py  work-pulse-db.cmd  work-pulse-service.cmd
sessions/: 2026-06-19-resolver-v2-migration.md  2026-06-20-map-activity-comment.md  2026-07-20-implement-health-check-for-backend-service.md  INDEX.md  template.md
src/: .gitignore  Cargo.docker.toml  Cargo.toml  work-pulse-app.Dockerfile  work-pulse-service.Dockerfile
src/work-pulse-cli/: Cargo.toml
src/work-pulse-cli/src/: activity_service.rs  category_mapper.rs  category_service.rs  csv_export.rs  csv_import.rs  main.rs
src/work-pulse-core/: Cargo.toml
src/work-pulse-core/src/: lib.rs
src/work-pulse-core/src/adapters/: mod.rs
src/work-pulse-core/src/entities/: accounting.rs  activities_list.rs  activity.rs  mod.rs  pam.rs
src/work-pulse-core/src/infra/: mod.rs
src/work-pulse-core/src/infra/importers/: csv_activities_importer.rs  mod.rs
src/work-pulse-core/src/infra/repositories/: mod.rs
src/work-pulse-core/src/infra/repositories/in_memory/: accounting_categories_list.rs  activities_list.rs  mod.rs  pam_categories_list.rs
src/work-pulse-core/src/infra/repositories/postgres/: accounting_categories_list.rs  activities_list.rs  mod.rs
src/work-pulse-core/src/use_cases/: accounting_categories_list.rs  activities_list.rs  daily_report.rs  mod.rs  pam_categories_list.rs  weekly_report.rs
src/work-pulse-service/: Cargo.toml
src/work-pulse-service/src/: lib.rs  main.rs  pam_categories_service.rs
src/work-pulse-service/src/services/: accounting_categories_service.rs  activities_list_service.rs  daily_report_service.rs  health_check_service.rs  mod.rs  pam_categories_service.rs  weekly_report_service.rs
src/work-pulse-service/tests/: services.rs
src/work-pulse-service/tests/features/: health_check_service.feature
tasks/: BOARD.md  (+6 more)
(+32 files in other folders)
