[package]
name = "work-pulse-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
encoding_rs = "0.8.35"
once_cell = "1.20.2"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
