[package]
name = "work-pulse-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.41"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
